# Viktorina

./: .gitignore  CMakeLists.txt  Jautajums.cpp  Jautajums.h  Lietotajs.h  LietotajuParvaldnieks.cpp  LietotajuParvaldnieks.h  README.md  Redaktors.cpp  Redaktors.h  SekmjuZurnals.h  Spele.cpp  Spele.h  SpelesProtokols.cpp  SpelesProtokols.h  Speletajs.cpp  Speletajs.h  lietotaji.db
